manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microgame-bot
spec:
  type: ClusterIP
  selector:
    app: microgame-bot
  ports:
    - port: 8080
      targetPort: http
